--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,13 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Sans-Serif';
+    font-family:'Helvetica Neue', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    font-family:'Helvetica Neue', 'Sans-Serif';
 }
 footer {
     border-top: 1px solid #d5d5d5;
