--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family:'Helvetica Neue', 'Sans-Serif';
+    font-family:'Helvetica', 'Sans-Serif';
 }
 nav ul, footer ul {
-    font-family:'Helvetica Neue', 'Sans-Serif';
+    font-family:'Helvetica', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -22,13 +22,13 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica Neue', 'Sans-Serif';
+    font-family:'Helvetica', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-    font-family:'Helvetica Neue', 'Sans-Serif';
+    font-family:'Helvetica', 'Sans-Serif';
 }
 footer {
     border-top: 1px solid #d5d5d5;
@@ -45,5 +45,5 @@ ul.posts li {
 }
 
 * {
-    font-family: 'Helvetica Neue';
+    font-family: 'Helvetica';
   }
