--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,11 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 nav ul li, footer ul li {
     display: inline;
@@ -16,39 +14,32 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     color: #999;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 a:hover {
     text-decoration: underline;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 
 ul.posts {
     margin: 20px auto 40px;
     font-size: 1.5em;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 
 ul.posts li {
     list-style: none;
-    font-family:'Helvetica', 'Sans-Serif';
 }
 
 * {
-    font-family: 'Helvetica';
+    font-family: 'Helvetica', sans-serif;
   }
