--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+
 			{{ content }}
-			
-			</div><!-- /.container -->
+
+		</div><!-- end container -->
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:nullmiso@gmail.com">email</a></li>
