--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		</div><!-- end container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:nullmiso@gmail.com">email</a></li>
+	        		<li><a href="mailto:nullmiso@gmail.com">email me</a></li>
 	        		<li><a href="https://github.com/nullmiso">github.com/nullmiso</a></li>
 				</ul>
 			</footer>
