--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,12 +26,13 @@
               <svg viewBox="0 0 512 512"><path d="M288 192v-38.1c0-17.2 3.8-25.9 30.5-25.9H352V64h-55.9c-68.5 0-91.1 31.4-91.1 85.3V192h-45v64h45v192h83V256h56.4l7.6-64H288z"/></svg>
             </a>
           </div>
-
+          <!-- disqus
           {% if site.discus_identifier %}
             <div id="disqus_thread" class="article-comments"></div>
             <script src="https://{{ site.discus_identifier }}.disqus.com/embed.js" async defer></script>
             <noscript>Please enable JavaScript to view the comments.</noscript>
           {% endif %}
+          -->
         </article>
         {% include footer.html %}
       </div>
