--- a/_assets/stylesheets/light.scss
+++ b/_assets/stylesheets/light.scss
@@ -9,7 +9,7 @@
 
 $black: #000;
 $gray-darkest: #121111;
-$miso-carmine: #ED6663
+$miso-carmine: #ED6663;
 $gray-darker: lighten($gray-darkest, 15);
 $gray-dark: lighten($gray-darkest, 30);
 $gray: lighten($gray-darkest, 45);
