--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
   <p>
     Site content © Andrew Yu 2021. Chalk template for Jekyll built by
-    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
+    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>.
   </p>
 </footer>
