--- a/_assets/stylesheets/fonts.scss
+++ b/_assets/stylesheets/fonts.scss
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Cormorant Garamond';
-  font-style: bold;
+  font-style: normal;
   font-weight: 700;
   src: asset_url('cormorant-garamond/Cormorant-Garamond-700.eot');
   src:
