--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
   <p>
-    Site content © Andrew Yu 2021. Chalk template for Jekyll built by
-    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>.
+    Site content © <a href="{{ 'about' | relative_url }}" title="About me">Andrew Yu</a> 2021. Chalk template for Jekyll built by Nielson Ramon.
+    .
   </p>
 </footer>
