--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
   <p>
-    Site content © <a href="{{ 'about' | relative_url }}" title="About me">Andrew Yu</a> 2021. Chalk template for Jekyll built by Nielson Ramon.
+    Site content © <a href="{{ 'about' | relative_url }}" title="About me">Andrew Yu</a> 2021. Chalk template built by Nielson Ramon.
   </p>
 </footer>
